# Sudoku

./: CMakeLists.txt  README.md
include/: AI_Utils.hpp  ANSI.h  Board.hpp  Chunk.hpp  Frame.hpp  Utils.h
labels/full/: board_0.txt  board_1.txt  board_10.txt  board_100.txt  board_101.txt  board_102.txt  board_103.txt  board_104.txt  board_105.txt  board_106.txt  board_107.txt  board_108.txt  board_109.txt  board_11.txt  board_110.txt  board_111.txt  board_112.txt  board_113.txt  board_114.txt  board_115.txt  board_116.txt  board_117.txt  board_118.txt  board_119.txt  board_12.txt  board_120.txt  board_121.txt  board_122.txt  board_123.txt  board_124.txt  board_125.txt  board_126.txt  board_127.txt  board_128.txt  board_129.txt  board_13.txt  board_130.txt  board_131.txt  board_132.txt  board_133.txt  (+960 more)
labels/playable/30/: board_0.txt  board_1.txt  board_10.txt  board_100.txt  board_101.txt  board_102.txt  board_103.txt  board_104.txt  board_105.txt  board_106.txt  board_107.txt  board_108.txt  board_109.txt  board_11.txt  board_110.txt  board_111.txt  board_112.txt  board_113.txt  board_114.txt  board_115.txt  board_116.txt  board_117.txt  board_118.txt  board_119.txt  board_12.txt  board_120.txt  board_121.txt  board_122.txt  board_123.txt  board_124.txt  board_125.txt  board_126.txt  board_127.txt  board_128.txt  board_129.txt  board_13.txt  board_130.txt  board_131.txt  board_132.txt  board_133.txt  (+960 more)
labels/playable/35/: board_0.txt  board_1.txt  board_10.txt  board_100.txt  board_101.txt  board_102.txt  board_103.txt  board_104.txt  board_105.txt  board_106.txt  board_107.txt  board_108.txt  board_109.txt  board_11.txt  board_110.txt  board_111.txt  board_112.txt  board_113.txt  board_114.txt  board_115.txt  board_116.txt  board_117.txt  board_118.txt  board_119.txt  board_12.txt  board_120.txt  board_121.txt  board_122.txt  board_123.txt  board_124.txt  board_125.txt  board_126.txt  board_127.txt  board_128.txt  board_129.txt  board_13.txt  board_130.txt  board_131.txt  board_132.txt  board_133.txt  (+960 more)
labels/playable/40/: board_0.txt  board_1.txt  board_10.txt  board_100.txt  board_101.txt  board_102.txt  board_103.txt  board_104.txt  board_105.txt  board_106.txt  board_107.txt  board_108.txt  board_109.txt  board_11.txt  board_110.txt  board_111.txt  board_112.txt  board_113.txt  board_114.txt  board_115.txt  board_116.txt  board_117.txt  board_118.txt  board_119.txt  board_12.txt  board_120.txt  board_121.txt  board_122.txt  board_123.txt  board_124.txt  board_125.txt  board_126.txt  board_127.txt  board_128.txt  board_129.txt  board_13.txt  board_130.txt  board_131.txt  board_132.txt  board_133.txt  (+960 more)
labels/playable/45/: board_0.txt  board_1.txt  board_10.txt  board_100.txt  board_101.txt  board_102.txt  board_103.txt  board_104.txt  board_105.txt  board_106.txt  board_107.txt  board_108.txt  board_109.txt  board_11.txt  board_110.txt  board_111.txt  board_112.txt  board_113.txt  board_114.txt  board_115.txt  board_116.txt  board_117.txt  board_118.txt  board_119.txt  board_12.txt  board_120.txt  board_121.txt  board_122.txt  board_123.txt  board_124.txt  board_125.txt  board_126.txt  board_127.txt  board_128.txt  board_129.txt  board_13.txt  board_130.txt  board_131.txt  board_132.txt  board_133.txt  (+960 more)
labels/playable/50/: board_0.txt  board_1.txt  board_10.txt  board_100.txt  board_101.txt  board_102.txt  board_103.txt  board_104.txt  board_105.txt  board_106.txt  board_107.txt  board_108.txt  board_109.txt  board_11.txt  board_110.txt  board_111.txt  board_112.txt  board_113.txt  board_114.txt  board_115.txt  (+980 more)
src/: AI_Utils.cpp  Board.cpp  Chunk.cpp  Frame.cpp  Utils.cpp  main.cpp
test/: Utils.cpp  example.cpp  run_tests.sh
test/expected/: README.md
utils/: boards_apparence.txt  show.sh
(+2000 files in other folders)
